<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snake_background"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/highest_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_score"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:ignore="MissingConstraints" />



    <Button
        android:id="@+id/score2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:text="score"
        app:layout_constraintBottom_toTopOf="@+id/lilu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="390dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ExtraText,MissingConstraints">



        <Button
            android:id="@+id/score"
            android:background="@color/black"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="170dp"
            android:textSize="20dp"
            android:text="@string/game_over_play_again">
        </Button>


        <TextView
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="70dp"

            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="cursive"
            android:padding="16dp"
            android:text="@string/snake_game"
            android:textColor="@color/brown"
            android:textSize="36sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/new_game"
            android:background="@color/purple_700"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:layout_marginEnd="130dp"
            android:layout_marginTop="130dp"
            android:text="@string/new_game">

        </Button>

        <Button
            android:id="@+id/level2"
            android:background="@color/purple_700"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/new_game"
            android:layout_marginEnd="130dp"
            android:layout_marginTop="20dp"
            android:text="@string/level_2_text">

    </Button>


    <Button
            android:id="@+id/resume"
            android:background="@color/purple_700"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/level2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="130dp"
            android:layout_marginTop="10dp"
            android:text="@string/resume_game">

        </Button>

        <Button
            android:id="@+id/playagain"
            android:background="@color/red"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="80dp"
            android:layout_below="@id/resume"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/game_over_play_again1">

        </Button>

        <RelativeLayout
            android:id="@+id/board"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:background="@color/black"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            tools:ignore="MissingConstraints">


        </RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lilu"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/up"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/up">
            </Button>

        </LinearLayout>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/left"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/left">
            </Button>

            <Button
                android:id="@+id/pause"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pause">
            </Button>

            <Button
                android:id="@+id/right"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/right">
            </Button>

        </LinearLayout>



        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/down"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/down">
            </Button>

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>